Add button shop category in lang file

--- a/Museum/resources/langs/fr_FR.yml
+++ b/Museum/resources/langs/fr_FR.yml
@@ -42,6 +42,11 @@ FACTION_MANAGE_FACTION_BUTTON_FORM: "Gérer la faction"
 FACTION_MANAGE_MEMBERS_BUTTON_FORM: "Gérer les membres"
 FACTION_MANAGE_LOGS_BUTTON_FORM: "Voir les logs"
 
+SHOP_DECORATIVE_BLOCKS_BUTTON_FORM: "Blocs de décorations{l}{AVAIBLES} disponibles"
+SHOP_CONSTRUCTION_BLOCKS_BUTTON_FORM: "Blocs de constructions{l}{AVAIBLES} disponibles"
+SHOP_ORES_BUTTON_FORM: "Minerais{l}{AVAIBLES} disponibles"
+SHOP_MISC_BUTTON_FORM: "Divers et variées{l}{AVAIBLES} disponibles"
+
 SHOP_TITLE_FORM: "Boutique d'objets"
 SHOP_LABEL_FORM: "{PREFIX}Vous avez actuellemnt {PRIMARY}{MONEY}{ECONOMY_SYMBOL}"
 SHOP_PRODUCT_LABEL_FORM: "{PREFIX}L'item {PRIMARY}{ITEM}{SECONDARY}, est actuellement à {PRIMARY}{BUY_PRICE}{ECONOMY_SYMBOL} {SECONDARY}à l'achat, et à {PRIMARY}{SELL_PRICE}{ECONOMY_SYMBOL} {SECONDARY}à la vente"
