--- a/Museum/resources/langs/fr_FR.yml
+++ b/Museum/resources/langs/fr_FR.yml
@@ -66,30 +66,32 @@ MANAGE_PLAYER_BAN_TITLE_FORM: "Bannir {PLAYER_MANAGE}"
 MANAGE_PLAYER_BAN_LABEL_FORM: "{PREFIX}Choisissez le temp et le type de banissement du joueur"
 
 # MESSAGES
-PLAYER_DISCONNECTED: "{PREFIX}Le joueur {ERROR}{DISCONNECTED_PLAYER} {SECONDARY}est actuellement déconnecté(e)"
+PLAYER_DISCONNECTED: "{ERROR_PREFIX}Le joueur {ERROR}{DISCONNECTED_PLAYER} {SECONDARY}est actuellement déconnecté(e)"
 
-PLAYER_FIRST_JOIN: "{PREFIX}Bienvenu(e) à {PRIMARY}{PLAYER} {SECONDARY}qui s'est connecté(e) pour la première fois sur le serveur"
-PLAYER_JOIN: "{PREFIX}Le joueur {PRIMARY}{PLAYER} {SECONDARY}a rejoint le serveur"
-PLAYER_LEAVE: "{PREFIX}le joueur {ERROR}{PLAYER} {SECONDARY}a quitter le serveur"
+PLAYER_FIRST_JOIN: "{SUCCESS_PREFIX}Bienvenu(e) à {PRIMARY}{PLAYER} {SECONDARY}qui s'est connecté(e) pour la première fois sur le serveur"
+PLAYER_JOIN: "{+} {PRIMARY}{PLAYER} {+}"
+PLAYER_FIRST_JOIN: "{+} {BASE}Première connexion de {PRIMARY}{PLAYER} {+}"
+PLAYER_LEAVE: "{-} {ERROR}{PLAYER} {-}"
 
-FACTION_CREATED: "{PREFIX}Vous venez de créer la faction {PRIMARY}{FACTION}{SECONDARY}, faite {PRIMARY}/f {SECONDARY}à nouveau pour gérer la faction"
+FACTION_CREATED: "{SUCCESS_PREFIX}Vous venez de créer la faction {PRIMARY}{FACTION}{SECONDARY}, faite {PRIMARY}/f {SECONDARY}à nouveau pour gérer la faction"
 
-FACTION_NO_INVITATIONS: "Vous n'avez aucunes invitations"
-FACTION_INVITE: "{PREFIX}Vous venez d'inviter {PRIMARY}{INVITED}"
-FACTION_INVITED: "{PREFIX}{PRIMARY}{OFFICIER}{SECONDARY}, vous a invité(e) dans la faction {PRIMARY}{FACTION}{SECONDARY}, faite {PRIMARY}/f accept:deny {SECONDARY}pour l'accepter ou refusé l'invitation"
-FACTION_INVITE_JOIN: "{PREFIX}{PRIMARY}{INVITED} {SECONDARY}a accepter l'invitation, il est maintenant dans la faction !"
-FACTION_INVITE_DENY: "{PREFIX}{PRIMARY}{INVITED} {SECONDARY}a refusé(e) l'invitation"
-FACTION_INVITE_TIME_OUT: "{PREFIX}L'invitation a expirée"
-FACTION_INVITE_PLAYER_DISCONNECTED: "{PREFIX}Le joueur est actuellement déconnecté(e)"
-FACTION_PLAYER_ALREADY_FACTION: "{PREFIX}Le joueur {PRIMARY}{PLAYER}{SECONDARY} a déjà une faction {SECONDARY}({PRIMARY}{FACTION}{SECONDARY})"
-FACTION_CANT_LEAVE_DISBAND: "{PREFIX}Vous ne pouvez pas quitter la faction, supprimer la faction pour pouvoir la quitter, vous êtes le {ERROR}Chef"
+FACTION_NO_INVITATIONS: "{ERROR_PREFIX}Vous n'avez aucunes invitations"
+FACTION_INVITE: "{SUCCESS_PREFIX}Vous venez d'inviter {PRIMARY}{INVITED}"
+FACTION_INVITED: "{SUCCESS_PREFIX}{PRIMARY}{OFFICIER}{SECONDARY}, vous a invité(e) dans la faction {PRIMARY}{FACTION}{SECONDARY}, faite {PRIMARY}/f accept:deny {SECONDARY}pour l'accepter ou refusé l'invitation"
+FACTION_INVITE_JOIN: "{SUCCESS_PREFIX}{PRIMARY}{INVITED} {SECONDARY}a accepter l'invitation, il est maintenant dans la faction !"
+FACTION_INVITE_DENY: "{ERROR_PREFIX}{PRIMARY}{INVITED} {SECONDARY}a refusé(e) l'invitation"
+FACTION_INVITE_TIME_OUT: "{ERROR_PREFIX}L'invitation a expirée"
+FACTION_INVITE_PLAYER_DISCONNECTED: "{ERROR_PREFIX}Le joueur est actuellement déconnecté(e)"
+FACTION_PLAYER_ALREADY_FACTION: "{ERROR_PREFIX}Le joueur {PRIMARY}{PLAYER}{SECONDARY} a déjà une faction {SECONDARY}({PRIMARY}{FACTION}{SECONDARY})"
+FACTION_CANT_LEAVE_DISBAND: "{ERROR_PREFIX}Vous ne pouvez pas quitter la faction, supprimer la faction pour pouvoir la quitter, vous êtes le {ERROR}Chef"
+FACTION_NO_ARGUMENTS: "{ERROR_PREFIX}Vous n'avez préciser aucun argument, faite {ERROR}/f help {BASE}pour plus d'aide"
 
-SETTINGS_UPDATED: "{PREFIX}Vos préférences ont bien été enregistrées"
+SETTINGS_UPDATED: "{SUCCESS_PREFIX}Vos préférences ont bien été enregistrées"
 
-SHOP_BUYED: "{PREFIX}Vous venez d'acheter {PRIMARY}x{COUNT} {ITEM_BUYED} {SECONDARY}pour un total de {PRIMARY}{PRICE}{ECONOMY_SYMBOL}"
-SHOP_SELLED: "{PREFIX}Vous venez de vendre {PRIMARY}x{COUNT} {ITEM_SELLED} {SECONDARY}pour un total de {PRIMARY}{PRICE}{ECONOMY_SYMBOL}"
-SHOP_NO_ENOUGHT_MONEY: "{PREFIX}Vous n'avez pas assez d'argent, il vous manque {PRIMARY}{NEEDED}{ECONOMY_SYMBOL}"
-SHOP_NOT_HAVE_ITEM: "{PREFIX}Vous n'avez pas {PRIMARY}x{COUNT} {ITEM} {SECONDARY}dans votre inventaire"
-SHOP_INVENTORY_FULL: "{PREFIX}Votre inventaire est actuellement plein, vous ne pouvez pas acheter d'item"
+SHOP_BUYED: "{SUCCESS_PREFIX}Vous venez d'acheter {PRIMARY}x{COUNT} {ITEM_BUYED} {SECONDARY}pour un total de {PRIMARY}{PRICE}{ECONOMY_SYMBOL}"
+SHOP_SELLED: "{SUCCESS_PREFIX}Vous venez de vendre {PRIMARY}x{COUNT} {ITEM_SELLED} {SECONDARY}pour un total de {PRIMARY}{PRICE}{ECONOMY_SYMBOL}"
+SHOP_NO_ENOUGHT_MONEY: "{ERROR_PREFIX}Vous n'avez pas assez d'argent, il vous manque {PRIMARY}{NEEDED}{ECONOMY_SYMBOL}"
+SHOP_NOT_HAVE_ITEM: "{ERROR_PREFIX}Vous n'avez pas {PRIMARY}x{COUNT} {ITEM} {SECONDARY}dans votre inventaire"
+SHOP_INVENTORY_FULL: "{ERROR_PREFIX}Votre inventaire est actuellement plein, vous ne pouvez pas acheter d'item"
 
-PLAYER_MANAGE_EDITION: "{PREFIX}Vous venez de modifié le joueur {PRIMARY}{PLAYER}"
+PLAYER_MANAGE_EDITION: "{SUCCESS_PREFIX}Vous venez de modifié le joueur {PRIMARY}{PLAYER}"
