--- a/Museum/resources/langs/fr_FR.yml
+++ b/Museum/resources/langs/fr_FR.yml
@@ -25,6 +25,7 @@ SETTINGS_DROPDOWN_1_2: "Espagnol"
 SETTINGS_DROPDOWN_1_3: "Italien"
 SETTINGS_DROPDOWN_1_4: "Chinois"
 SETTINGS_TOGGLE_1: "Affichage avancé de votre armure en combat"
+SETTINGS_TOGGLE_2: "Affichage des coordonnées"
 SETTINGS_DROPDOWN_2: "Sexe de votre unicode (Staff)"
 SETTINGS_DROPDOWN_2_0: "[U] Homme (Blanc)"
 SETTINGS_DROPDOWN_2_1: "[U] Homme (Noir)"
@@ -99,6 +100,8 @@ NO_CLAIM_ZONE: "{ERROR_PREFIX}Vous êtes dans aucune zone protégé"
 FACTION_CLAIM: "{SUCCESS_PREFIX}Vous venez de protégé la zone"
 FACTION_UNCLAIM: "{SUCCESS_PREFIX}Vous venez de retiré(e) la protection de la zone"
 FACTION_ZONE_ALREADY: "{ERROR_PREFIX}Cette zone est déjà protégé par {ERROR}{FACTION}"
+FACTION_SETHOME: "{SUCCESS_PREFIX}Vous venez de définir la nouvelle position pour la résidence de faction"
+FACTION_SETHOME_BROADCAST: "{SUCCESS_PREFIX}Le joueur {PRIMARY}{PLAYER} {SECONDARY}viens de définir la nouvelle localisation de la résidence de faction"
 
 SETTINGS_UPDATED: "{SUCCESS_PREFIX}Vos préférences ont bien été enregistrées"
 
@@ -117,3 +120,4 @@ PLAYER_MANAGE_EDITION: "{SUCCESS_PREFIX}Vous venez de modifié le joueur {PRIMAR
 TELEPORT_COOLDOWN: " §fTéléportation dans {SECONDS} secondes §f(§cNe bougez pas§f) "
 TELEPORT_CANCELLED: " §cTéléportation annulé, vous venez de bouger "
 TELEPORT_SUCCESSFULY: " §fTéléportation réussi vers §a{HOME} "
+END_COMBAT: " Fin du combat dans {SECONDS} secondes "
