--- a/Museum/resources/langs/fr_FR.yml
+++ b/Museum/resources/langs/fr_FR.yml
@@ -85,6 +85,9 @@ MANAGE_PLAYER_LABEL_FORM: "{PREFIX}Grade: {PRIMARY}{RANK}"
 MANAGE_PLAYER_BAN_TITLE_FORM: "Bannir {PLAYER_MANAGE}"
 MANAGE_PLAYER_BAN_LABEL_FORM: "{PREFIX}Choisissez le temp et le type de banissement du joueur"
 
+FACTION_INFO_TITLE_FORM: "Faction: {FACTION}"
+FACTION_INFO_LABEL_FORM: "{POWER_UNI} Puissance: {POWER}/{POWER_MAX}{l}{MEMBERS_UNI} Nombres de joueurs: {MEMBERS}{l}"
+
 # MESSAGES
 PLAYER_DISCONNECTED: "{ERROR_PREFIX}Le joueur {ERROR}{DISCONNECTED_PLAYER} {SECONDARY}est actuellement déconnecté(e)"
 
